--- a/style.css
+++ b/style.css
@@ -1,8 +1,19 @@
+.resume{
+  background-color:lightblue;
+  font-size:200%;
+  width:100%;
+  line-height:100px;
+  text-align:center;
+  padding-left:10px;
+    
+}
+
 body{
-  background-color:#444444;
-  color:#dddddd;
+  background-color:white;
+  color:black;
   font-family: Arial, Helvitica, sens-serif;
-  margin: 10% 10%;
+  margin: 1px 10%;
+  line-height:120%;
 }
 
 .exp-header{
@@ -10,10 +21,19 @@ body{
   text-transform: uppercase;
   border-top:1px solid #dddddd;
   border-bottom:1px solid #dddddd;
-  background-color: rgba(0,0,0, 0.1)
+  background-color: lightgrey;
 }
 
-.image{
-  width:20%;
-  margin-left:-5%;
+
+.footer{
+ text-align: center; 
+ background-color:lightblue;
+  color:black;
+  padding:5% %;
+  width:102%;
+  text-align:left;
+  padding-top:20px;
+  padding-top:20px;
+  padding-left:20px;
+  margin-bottom:25px;
 }
