--- a/style.css
+++ b/style.css
@@ -1,48 +1,59 @@
-.resume{
-  background-color:lightblue;
-  font-size:200%;
-  width:100%;
-  line-height:100px;
-  text-align:center;
-  padding-left:10px;
-    
-}
-
 body{
-  background-color:white;
-  color:black;
-  font-family: Arial, Helvitica, sens-serif;
-  margin: 1px 10%;
-  line-height:120%;
+    padding-left: 400px;
+    padding-right: 400px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+  line-height: normal;
+    word-spacing: 2px;
+ background-color: yellowgreen;
+ text-align: left;
+}
+h1, h4 {
+    font-family: 'Times New Roman', Times, serif;
+    border-bottom: 1px solid black;
+    margin-top: 15px;
+   
+
+ 
+}
+ h4{
+    word-spacing: 2px;
+    line-height: 10%;
+    border-bottom: 1px solid black;
+    font-family: tahoma;
+ }
+
+li{
+    word-spacing: 2px;
+    line-height: 100%;
+    line-height: normal;
+}
+.title{
+    text-align: left;
+}
+.date{
+  float: right;
+   
 }
 
-.img{
-  width:30%;
-  height:30%;
-  float:right;
-  padding:10% 10%;
-  margin-top:-80px
-  
+img{
+    width: 20%;
+    float:right;
+  margin-top: -50px;
+  opacity: 1;
+  border: 2px;
+  border-radius: 1px;
+
 }
 
-.exp-header{
-  text-align: center;
-  text-transform: uppercase;
-  border-top:1px solid #dddddd;
-  border-bottom:1px solid #dddddd;
-  background-color: lightgrey;
+.prof{
+    line-height: 100%;
+    word-spacing: 1.5px;
 }
-
 
 .footer{
- text-align: center; 
- background-color:lightblue;
-  color:black;
-  padding:5% %;
-  width:102%;
-  text-align:left;
-  padding-top:20px;
-  padding-top:20px;
-  padding-left:20px;
-  margin-bottom:25px;
+    margin: 20px;
+    padding: 0;
+    text-align: center;
 }
+Footer
